payment-history in fee report implemnet data-table and update fee amount value issue fix 2) search in pymment history issue fix 4) scrollinf and button alignment change in payment popup 5) cheque amount not display sum of all installement issue fixed 6) refactor payment history all code

--- a/src/app/components/report/fee-report/payment-history-main/payment-history-main.component.scss
+++ b/src/app/components/report/fee-report/payment-history-main/payment-history-main.component.scss
@@ -350,6 +350,9 @@
 .showFilter:hover{
     cursor: pointer;
 }
+.showFilter{
+    float: right;
+}
 
 $color-base: #efefef;
 $color-base: #efefef;
@@ -384,4 +387,14 @@ $color-highlight: lighten($color-base, 7%);
 
 .text-change{
     text-transform: uppercase
+}
+
+.table-responsive{
+    overflow-x: hidden !important;
+    overflow-y: auto !important;
+}
+
+.pull-right {
+    margin-top: 26px;
+    margin-left: 122px;
 }
